# rust_smilescript

./: Cargo.toml  README.md
examples/: arithmetic.sms  array.sms  class.sms  continue.sms  fib.sms  functions.sms  gc_checker.sms  if_else.sms  loop.sms  scopes.sms
src/: chunk.rs  cmd.rs  compiler.rs  debug.rs  error.rs  gc.rs  lib.rs  main.rs  object.rs  parser.rs  scanner.rs  value.rs  vm.rs
tests/: integration.rs
tests/common/: mod.rs
tests/sms/: break.sms  class.sms  closure.sms
