[package]
name = "smsc"
version = "0.1.0"
edition = "2024"

[features]
#default = ["debug_trace_execution", "debug_print_code", "gc"]
default = []
gc = ["debug_log_gc", "stress_gc"]
debug_trace_execution = []
debug_print_code = []
debug_log_gc = []
stress_gc = []

[dependencies]
test-generator = "0.3.1"
